<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/chat_file_transfer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="#666"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/chat_file_transfer_receive_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dip"
            android:paddingRight="5dip" >

            <ProgressBar
                android:id="@+id/chat_progress_dialog_receive"
                android:layout_width="18dp"
                android:layout_height="18dp" />

            <TextView
                android:id="@+id/chat_receiving_file_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dip"
                android:text="@string/label_receiving_file"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#FFF" />

            <ProgressBar
                android:id="@+id/chat_receive_file_progress_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/chat_file_transfer_send_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dip"
            android:paddingRight="5dip" >

            <ProgressBar
                android:id="@+id/chat_progress_dialog_send"
                android:layout_width="18dp"
                android:layout_height="18dp" />

            <TextView
                android:id="@+id/chat_sending_file_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="24dip"
                android:text="@string/label_sending_file"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#FFF" />

            <ProgressBar
                android:id="@+id/chat_send_file_progress_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/chat_top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#E1E1E1"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/chat_message_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

        </ListView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/chat_bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="#666" >

        <Button
            android:id="@+id/chat_attatchment_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/symbol_plus"
            tools:ignore="NestedWeights" />

        <EditText
            android:id="@+id/chat_message_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/label_message" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/chat_send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/label_send" />

    </LinearLayout>

</LinearLayout>