<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:ignore="UseCompoundDrawables" android:baselineAligned="false">

    <LinearLayout
        android:id="@+id/contact_entry_avatar_panel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="0"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/contact_entry_avatar_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="5dip"
            android:adjustViewBounds="true"
            android:contentDescription="@string/label_avatar"
            android:maxHeight="50dip"
            android:maxWidth="50dip"
            android:scaleType="fitXY"
            android:src="@drawable/ic_default_contact" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/contact_entry_user_panel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/contact_entry_display_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/label_display_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/contact_entry_online_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_online_status"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#999" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_weight="0"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/contact_entry_offline_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/label_online_status"
            android:src="@drawable/ic_offline" />

        <ImageView
            android:id="@+id/contact_entry_online_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/label_online_status"
            android:src="@drawable/ic_online" />
    </LinearLayout>

</LinearLayout>